# curriculum_board_backend_next

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  fleet.toml
.cargo/: config
.github/workflows/: docker-dev.yaml  docker-master.yaml
cli/: Cargo.toml
cli/src/: main.rs
entity/: Cargo.toml
entity/src/: achievement.rs  course.rs  course_review.rs  coursegroup.rs  coursegroup_course.rs  lib.rs  prelude.rs  review.rs  user_achievement.rs  userextra.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220826_174342_create_table.rs  m20230119_125830_create_user_extra.rs  m20230214_202755_related_to_foreign.rs  m20230215_111344_userextra_to_achievement.rs  main.rs
src/: constant.rs  main.rs  tests.rs
src/api/: auth.rs  curriculum_board.rs  error_handler.rs  mod.rs  static.rs
src/entity/: course.rs  course_review.rs  coursegroup.rs  coursegroup_course.rs  mod.rs  review.rs
