[package]
name = "curriculum_board_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 服务器框架
actix-web = "4"
# ORM 支持。本地开发别忘了装 cargo install sea-orm-cli
sea-orm = { version = "0.8.0", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"] }
# JSON 支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# .env 支持
dotenv = "0.15.0"
# 便于少写点 if let 嵌套
if_chain = "1.0.2"
# 异步网络请求
reqwest = { version = "0.11.11", features = ["json"] }
# 键值对缓存
moka = { version = "0.9.0", features = ["future"] }
# 全局变量
lazy_static = "1.4.0"
# 日期时间支持
chrono = "0.4.19"