[package]
name = "curriculum_board_backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# 编译期获取 Git Commit 号
vergen = { version = "7.2.1", features = ["git", "build", "rustc"] }
anyhow = "1.0.57"

# 定义子 Crate
[workspace]
members = [".", "entity", "migration"]


[dependencies]
# 依赖子 Crate
entity = { path = "entity" }
migration = { path = "migration" }
# 服务器框架
actix-web = "4"
# 静态文件支持
actix-files = "0.6.0"
# 静态文件的 Mime type 设置
mime = "0.3.16"
# ORM 支持。本地开发别忘了装 cargo install sea-orm-cli
sea-orm = { version = "0.8.0", features = ["sqlx-sqlite", "sqlx-mysql", "runtime-actix-native-tls", "macros"] }
# JSON 支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# .env 支持
dotenv = "0.15.0"
# 便于少写点 if let 嵌套
if_chain = "1.0.2"
# 异步网络请求
reqwest = { version = "0.11", features = ["json"] }
# 键值对缓存
moka = { version = "0.8.5", features = ["future"] }
# 全局变量
lazy_static = "1.4.0"
# 日期时间支持
chrono = "0.4.19"
# 随机数
rand = "0.8.5"
# SHA-3 Hash
sha3 = "0.10.2"
# Base16 编码，也就是 Hex 编码
base16ct = { version = "0.1.1", features = ["alloc"] }
# 支持异步初始化的 Once Cell 实现
async-once-cell = "0.4.2"
# OpenAPI 文档生成
utoipa = { version = "2.4.2", features = ["actix_extras"] }
# OpenSSL 支持。因为 features = ["vendored"] 需要 Perl 编译环境，使用本就带有 openssl 的环境本地开发时，最好注释掉下行，否则会报错。
openssl = { version = "0.10.41", features = ["vendored"] }