[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] }
anyhow = "^1"
tokio = { version = "^1", features = ["full"] }
ctrlc = "^3"
indicatif = "^0"
either = "^1"
entity = { path = "../entity" }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
