[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0" }
# JSON 支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日期时间支持
chrono = "0.4.23"
# OpenAPI 文档生成
utoipa = { version = "2.4.2", features = ["actix_extras"] }
# 键值对缓存
moka = { version = "0.10.0", features = ["future"] }
# 全局变量
lazy_static = "1.4.0"