[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
# JSON 支持
serde = { workspace = true }
serde_json = { workspace = true }
# 日期时间支持
chrono = { workspace = true }
# OpenAPI 文档生成
utoipa = { workspace = true }
# 键值对缓存
moka = { workspace = true }
# 全局变量
lazy_static = { workspace = true }